kubernetesConfigurations/yamlFiles/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smallcase-flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smallcase-flask
  strategy: {}
  template:
    metadata:
      labels:
        app: smallcase-flask
    spec:
      containers:
      - name: smallcase-flask
        image: 374191519168.dkr.ecr.us-east-2.amazonaws.com/smallcase-app
        ports:
          - containerPort: 80
        resources: {}
        imagePullPolicy: Always
