kubernetesConfigurations/yamlFiles/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: smallcase-flask
spec:
  selector:
    app: smallcase-flask
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
